# HuskyBC

./: .eslintrc.cjs  .gitignore  .goreleaser.yaml  .lintstagedrc  .npmignore  .prettierignore  .prettierrc.yaml  .swcrc  AUTHORS.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  bun.lockb  eslint.config.cjs  eslint.config.js  go.mod  go.sum  main.go  package.json  pnpm-lock.yaml  tsconfig.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: blank_issue.yml  bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: codeql.yml  github-release.yml
.zed/: settings.json
internal/cli/: show_help.go  show_version.go
internal/config/: option_manager.go  options.go
internal/constants/: cli.go  colors.go  commitlint.go  dependencies.go  encoding.go  errors.go  github.go  lint_staged.go  main.go  package_json.go  package_managers.go  paths.go  regex.go  version.go
internal/enums/: errors.go  message.go
internal/error_messages/: config.go  file.go  general.go  process.go  user-input.go  utils.go
internal/handlers/: handlers_options.go
internal/options/: cli.go
internal/types/: cli.go  message.go
internal/user-input/: add-commitlint.go  package-managers.go  publishToNpm.go  userinput_test.go  utils.go
internal/user_input/: add_commitlint.go  package_managers.go  publishToNpm.go
internal/utils/: commitlint.go  console.go  dependencies.go  npm.go  (+9 more)
npm-package/: index.js  package.json
npm-wrapper/: .npmignore  README.md  eslint.config.cjs  index.js  package.json  postinstall.js  prettierrc.yaml  preuninstall.js
src/: index.ts  main.rs
(+74 files in other folders)
