[package]
name = "huskybc"
version = "1.0.0"
edition = "2024"

[dependencies]
colored = "3.1.1"
indicatif = "0.18.4"
inquire = "0.9.4"
open = "5.3.3"
phf = { version = "0.13.1", features = ["macros"] }
serde_json = "1.0.149"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
incremental = false
